--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,10 +26,9 @@ export(assessTrajectoryTrendsCustomized)
 export(assessTrajectoryTrendsCustomized2)
 export(bin_by_angle)
 export(bin_by_area)
-export(binarize_matrix)
 export(buffer_area)
-export(check_image_annoation_ids)
-export(check_image_annoation_tags)
+export(check_image_annotation_ids)
+export(check_image_annotation_tags)
 export(check_method)
 export(check_object)
 export(check_pt)
@@ -48,14 +47,12 @@ export(check_slot_version)
 export(check_to)
 export(check_trajectory_object)
 export(check_variables)
+export(close_area_df)
 export(clusterSpCorResults)
 export(computeGeneMetaData)
 export(computeGeneMetaData2)
 export(compute_angle_between_two_points)
 export(compute_angle_related_to_center)
-export(compute_pattern_relation)
-export(compute_pattern_similarity)
-export(compute_sgs_df)
 export(containsHistologyImage)
 export(containsImage)
 export(containsImageObject)
@@ -73,7 +70,6 @@ export(discardGeneSets)
 export(discardGenes)
 export(discardImageAnnotations)
 export(discardSegmentationVariable)
-export(evaluate_spatial_patterns)
 export(examineClusterResults)
 export(examineTrajectoryAssessment)
 export(exchangeImage)
@@ -122,14 +118,6 @@ export(getGeneCounts)
 export(getGeneDistMtr)
 export(getGeneMetaData)
 export(getGeneMetaDf)
-export(getGenePatternCluster)
-export(getGenePatternCoordsDf)
-export(getGenePatternCorrelations)
-export(getGenePatternDf)
-export(getGenePatternDistances)
-export(getGenePatternExtentDf)
-export(getGenePatternSimilarities)
-export(getGenePatternsAboveThreshold)
 export(getGeneSetDf)
 export(getGeneSetList)
 export(getGeneSetOverview)
@@ -143,14 +131,14 @@ export(getGseaDf)
 export(getGseaResults)
 export(getHclustObject)
 export(getHclustObjectCnv)
-export(getHspaResults)
 export(getImage)
 export(getImageAnnotation)
+export(getImageAnnotationAreaDf)
 export(getImageAnnotationBarcodes)
 export(getImageAnnotationCenter)
 export(getImageAnnotationCenterBcsp)
-export(getImageAnnotationDf)
 export(getImageAnnotationIds)
+export(getImageAnnotationScreeningDf)
 export(getImageAnnotationTags)
 export(getImageAnnotations)
 export(getImageDims)
@@ -216,14 +204,7 @@ export(hlpr_summarize_residuals)
 export(hlpr_summarize_trajectory_df)
 export(hlpr_vector_projection)
 export(hlpr_widen_trajectory_df)
-export(hspaCsrCutoff)
-export(hspaCsrTesting)
-export(hspaDataBinarization)
-export(hspaPatternIdentification)
-export(hspaPatternSimilarity)
-export(hspaPatternSimilarity_future)
-export(hspaSelectGenes)
-export(identify_gene_patterns_dbscan)
+export(imageAnnotationScreening)
 export(initiateSpataObject_10X)
 export(initiateSpataObject_CountMtr)
 export(initiateSpataObject_Empty)
@@ -273,8 +254,6 @@ export(plotAutoencoderResults)
 export(plotBoxplot)
 export(plotClockplot)
 export(plotCnvResults)
-export(plotCsrCutoffSimulations)
-export(plotCsrResults)
 export(plotCustomizedTrajectoryTrends)
 export(plotDeaDotPlot)
 export(plotDeaGeneCount)
@@ -294,16 +273,8 @@ export(plotFourStates)
 export(plotFourStates2)
 export(plotGeneDendrogram)
 export(plotGeneMetaData)
-export(plotGenePattern)
-export(plotGenePatternBinarized)
-export(plotGenePatternCluster)
-export(plotGenePatternDendrogram)
-export(plotGenePatternDenoised)
-export(plotGenePatternHeatmap)
-export(plotGenePatterns)
 export(plotGseaDotPlot)
 export(plotHistogram)
-export(plotHspaSummary)
 export(plotImage)
 export(plotImageAnnotations)
 export(plotImageGgplot)
@@ -315,17 +286,16 @@ export(plotScatterplot)
 export(plotSegmentation)
 export(plotSpatialTrajectories)
 export(plotStatisticsInteractive)
-export(plotSummarySGS)
+export(plotSummaryIAS)
 export(plotSurface)
 export(plotSurface2)
 export(plotSurfaceAverage)
 export(plotSurfaceBase)
 export(plotSurfaceComparison)
 export(plotSurfaceComparison2)
-export(plotSurfaceHotspots)
+export(plotSurfaceIAS)
 export(plotSurfaceInteractive)
 export(plotSurfaceQuantiles)
-export(plotSurfaceSGS)
 export(plotTrajectory)
 export(plotTrajectoryBarplot)
 export(plotTrajectoryFeatures)
@@ -336,12 +306,13 @@ export(plotTrajectoryGeneSets)
 export(plotTrajectoryGenes)
 export(plotTrajectoryHeatmap)
 export(plotTrajectoryLineplot)
+export(plotTrajectoryLineplotFitted)
 export(plotTsne)
 export(plotTsneComparison)
 export(plotUmap)
 export(plotUmapComparison)
 export(plotViolinplot)
-export(plotVolcanoSGS)
+export(plotVolcanoIAS)
 export(printAutoencoderSummary)
 export(printDeaOverview)
 export(printDefaultInstructions)
@@ -357,12 +328,12 @@ export(renameSegments)
 export(rotateImage)
 export(runAutoencoderAssessment)
 export(runAutoencoderDenoising)
+export(runBayesSpaceClustering)
 export(runCnvAnalysis)
 export(runDeAnalysis)
 export(runGSEA)
 export(runHclust)
 export(runHclustCnv)
-export(runHspa)
 export(runPca)
 export(runPca2)
 export(runSparkx)
@@ -380,7 +351,6 @@ export(setActiveExpressionMatrix)
 export(setCnvResults)
 export(setCoordsDf)
 export(setCountMatrix)
-export(setCsrCutoff)
 export(setDefaultGrouping)
 export(setDefaultInstructions)
 export(setDefaultTrajectory)
@@ -388,7 +358,6 @@ export(setDefaultTrajectoryId)
 export(setDenoisedMatrix)
 export(setDirectoryInstructions)
 export(setFeatureDf)
-export(setHspaResults)
 export(setImageDirHighres)
 export(setImageDirLowres)
 export(setPcaDf)
@@ -400,15 +369,14 @@ export(shift_smrd_projection_df)
 export(showColors)
 export(showModels)
 export(smoothSpatially)
-export(spatialGradientScreening)
 export(spatialTrajectoryScreening)
 export(subsetByBarcodes_CountMtr)
 export(subsetByBarcodes_ExprMtr)
 export(subsetBySegment_CountMtr)
 export(subsetBySegment_ExprMtr)
 export(summarize_and_shift_variable_df)
+export(summarize_ias_results)
 export(summarize_projection_df)
-export(summarize_sgs_df)
 export(theme_trajectory_fit)
 export(titleNone)
 export(trajectory_patterns)
@@ -434,6 +402,8 @@ export(validPlotTypes)
 export(validateSpataObject)
 export(vselect)
 exportClasses(HistologyImage)
+exportClasses(ImageAnnotation)
+exportClasses(ImageAnnotationScreening)
 exportClasses(Visium)
 exportClasses(data_counts)
 exportClasses(default_instructions)
@@ -442,9 +412,10 @@ exportClasses(spata2)
 exportClasses(spatial_trajectory)
 exportMethods(asHistologyImage)
 exportMethods(asSpatialTrajectory)
+exportMethods(getImageAnnotationCenter)
 exportMethods(getTrajectoryComment)
 exportMethods(plotClockplot)
-exportMethods(plotSurfaceSGS)
+exportMethods(plotSurfaceIAS)
 exportMethods(runGSEA)
 exportMethods(show)
 import(SingleCellExperiment)
