--- a/NAMESPACE
+++ b/NAMESPACE
@@ -163,6 +163,7 @@ export(getSignatureEnrichment)
 export(getSpCorCluster)
 export(getSpCorClusterNames)
 export(getSparkxGeneDf)
+export(getSparkxGenes)
 export(getSparkxResults)
 export(getSpataDf)
 export(getSpatialTrajectory)
@@ -241,6 +242,7 @@ export(make_pretty_model_names)
 export(mapImageAnnotationTags)
 export(mergeGroups)
 export(mergeSpataObjects)
+export(model_formulas)
 export(nBarcodes)
 export(nCounts)
 export(nGenes)
@@ -396,6 +398,7 @@ export(validDirectoryInstructionSlots)
 export(validDistanceMethods)
 export(validHierarchicalClusterMethods)
 export(validImageClasses)
+export(validModelNames)
 export(validPadjMethods)
 export(validPatternRecognitionMethods)
 export(validPlotTypes)
@@ -404,6 +407,9 @@ export(vselect)
 exportClasses(HistologyImage)
 exportClasses(ImageAnnotation)
 exportClasses(ImageAnnotationScreening)
+exportClasses(SpatialTrajectory)
+exportClasses(SpatialTrajectoryScreening)
+exportClasses(Trajectory)
 exportClasses(Visium)
 exportClasses(data_counts)
 exportClasses(default_instructions)
