--- a/NAMESPACE
+++ b/NAMESPACE
@@ -52,7 +52,6 @@ export(clusterSpCorResults)
 export(computeGeneMetaData)
 export(computeGeneMetaData2)
 export(compute_angle_between_two_points)
-export(compute_angle_related_to_center)
 export(containsHistologyImage)
 export(containsImage)
 export(containsImageObject)
@@ -250,7 +249,6 @@ export(nImageAnnotations)
 export(nest_shifted_projection_df)
 export(normalize_smrd_projection_df)
 export(peak_trends)
-export(pick_vars)
 export(plotAutoencoderAssessment)
 export(plotAutoencoderResults)
 export(plotBoxplot)
@@ -314,7 +312,7 @@ export(plotTsneComparison)
 export(plotUmap)
 export(plotUmapComparison)
 export(plotViolinplot)
-export(plotVolcanoIAS)
+export(plotVolcano)
 export(printAutoencoderSummary)
 export(printDeaOverview)
 export(printDefaultInstructions)
@@ -376,8 +374,8 @@ export(subsetByBarcodes_CountMtr)
 export(subsetByBarcodes_ExprMtr)
 export(subsetBySegment_CountMtr)
 export(subsetBySegment_ExprMtr)
+export(summarizeIAS)
 export(summarize_and_shift_variable_df)
-export(summarize_ias_results)
 export(summarize_projection_df)
 export(theme_trajectory_fit)
 export(titleNone)
@@ -422,6 +420,7 @@ exportMethods(getImageAnnotationCenter)
 exportMethods(getTrajectoryComment)
 exportMethods(plotClockplot)
 exportMethods(plotSurfaceIAS)
+exportMethods(plotVolcano)
 exportMethods(runGSEA)
 exportMethods(show)
 import(SingleCellExperiment)
