--- a/NAMESPACE
+++ b/NAMESPACE
@@ -85,8 +85,6 @@ export(flipImage)
 export(flipImageAndCoords)
 export(geom_point_fixed)
 export(getActiveMatrixName)
-export(getAscendingVars)
-export(getAscendingVarsDf)
 export(getAutoencoderAssessment)
 export(getAutoencoderSetUp)
 export(getBarcodeSpotDistances)
@@ -104,8 +102,6 @@ export(getDefaultGrouping)
 export(getDefaultInstructions)
 export(getDefaultTrajectory)
 export(getDefaultTrajectoryId)
-export(getDescendingVars)
-export(getDescendingVarsDf)
 export(getDirectoryInstructions)
 export(getExpressionMatrix)
 export(getExpressionMatrixNames)
@@ -159,6 +155,7 @@ export(getSegmentNames)
 export(getSegmentationNames)
 export(getSegmentationVariableNames)
 export(getSignatureEnrichment)
+export(getSmrdResultsDf)
 export(getSpCorCluster)
 export(getSpCorClusterNames)
 export(getSparkxGeneDf)
@@ -176,8 +173,10 @@ export(getTrajectoryObject)
 export(getTrajectorySegmentDf)
 export(getTsneDf)
 export(getUmapDf)
-export(getVarsDf)
+export(getVarNames)
 export(ggpInit)
+export(ggpLayerEncirclingGroups)
+export(ggpLayerEncirclingIAS)
 export(ggpLayerFrameByCoords)
 export(ggpLayerFrameByImage)
 export(ggpLayerImage)
@@ -286,7 +285,7 @@ export(plotScatterplot)
 export(plotSegmentation)
 export(plotSpatialTrajectories)
 export(plotStatisticsInteractive)
-export(plotSummaryIAS)
+export(plotSummary)
 export(plotSurface)
 export(plotSurface2)
 export(plotSurfaceAverage)
@@ -417,8 +416,11 @@ exportClasses(spatial_trajectory)
 exportMethods(asHistologyImage)
 exportMethods(asSpatialTrajectory)
 exportMethods(getImageAnnotationCenter)
+exportMethods(getSmrdResultsDf)
 exportMethods(getTrajectoryComment)
+exportMethods(getVarNames)
 exportMethods(plotClockplot)
+exportMethods(plotSummary)
 exportMethods(plotSurfaceIAS)
 exportMethods(plotVolcano)
 exportMethods(runGSEA)
