--- a/NAMESPACE
+++ b/NAMESPACE
@@ -59,6 +59,7 @@ export(countImageAnnotationTags)
 export(createImageAnnotations)
 export(createSegmentation)
 export(createSegmentation2)
+export(createSpatialTrajectories)
 export(createTrajectories)
 export(createTrajectoryManually)
 export(create_model_df)
