--- a/NAMESPACE
+++ b/NAMESPACE
@@ -267,6 +267,7 @@ export(plotDeaHeatmap)
 export(plotDeaLogFC)
 export(plotDeaPvalues)
 export(plotDeaSummary)
+export(plotDeaVolcano)
 export(plotDendrogram)
 export(plotDendrogramCnv)
 export(plotDensityplot)
