dea dot plot update

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ export(add_models_to_shifted_projection_df)
 export(adjustDefaultInstructions)
 export(adjustDirectoryInstructions)
 export(adjustGeneSetDf)
+export(adjustGseaDf)
 export(allColorpalettes)
 export(allColorspectra)
 export(all_color_palettes)
