--- a/NAMESPACE
+++ b/NAMESPACE
@@ -283,6 +283,7 @@ export(plotGeneDendrogram)
 export(plotGeneMetaData)
 export(plotGseaDotPlot)
 export(plotHistogram)
+export(plotIasHeatmap)
 export(plotImage)
 export(plotImageAnnotations)
 export(plotImageGgplot)
