--- a/NAMESPACE
+++ b/NAMESPACE
@@ -284,6 +284,7 @@ export(plotGeneMetaData)
 export(plotGseaDotPlot)
 export(plotHistogram)
 export(plotIasHeatmap)
+export(plotIasLineplot)
 export(plotImage)
 export(plotImageAnnotations)
 export(plotImageGgplot)
@@ -388,6 +389,7 @@ export(subsetBySegment_ExprMtr)
 export(summarizeIAS)
 export(summarize_and_shift_variable_df)
 export(summarize_corr_string)
+export(summarize_formulas)
 export(summarize_projection_df)
 export(summarize_rauc)
 export(theme_trajectory_fit)
