--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -98,12 +98,12 @@ Collate:
     'module-surface-plot.R'
     'n-functions.R'
     'package-dependencies.R'
-    'ploIasHeatmap.R'
     'plot-family-miscellaneous.R'
     'plot-family-statistics.R'
     'plot-family-summaries.R'
     'plot-family-surface.R'
     'plotDeaVolcano.R'
+    'plotIasHeatmap.R'
     'plotSurfaceBase.R'
     'plotSurfaceInteractivelyDiet.R'
     'plotTrajectoryLineplotFitted.R'
