--- a/NAMESPACE
+++ b/NAMESPACE
@@ -63,6 +63,7 @@ export(countImageAnnotationTags)
 export(createImageAnnotations)
 export(createSegmentation)
 export(createSegmentation2)
+export(createSpatialSegmentation)
 export(createSpatialTrajectories)
 export(createTrajectories)
 export(createTrajectoryManually)
@@ -189,8 +190,10 @@ export(ggpLayerFrameByCoords)
 export(ggpLayerFrameByImage)
 export(ggpLayerImage)
 export(ggpLayerImageAnnotation)
+export(ggpLayerRect)
 export(ggpLayerThemeCoords)
 export(ggpLayerTrajectories)
+export(ggpLayerZoom)
 export(gradient_trends)
 export(hlpr_add_models)
 export(hlpr_add_old_coords)
@@ -212,6 +215,7 @@ export(hlpr_summarize_trajectory_df)
 export(hlpr_vector_projection)
 export(hlpr_widen_trajectory_df)
 export(imageAnnotationScreening)
+export(imageAnnotationToSegmentation)
 export(initiateSpataObject_10X)
 export(initiateSpataObject_CountMtr)
 export(initiateSpataObject_Empty)
@@ -233,6 +237,7 @@ export(joinWithVariables)
 export(lastImageAnnotation)
 export(legendBottom)
 export(legendColor)
+export(legendLeft)
 export(legendNone)
 export(legendRight)
 export(legendTop)
@@ -306,6 +311,7 @@ export(plotSurfaceComparison2)
 export(plotSurfaceIAS)
 export(plotSurfaceInteractive)
 export(plotSurfaceQuantiles)
+export(plotSurfaceTrajectoryBins)
 export(plotTrajectory)
 export(plotTrajectoryBarplot)
 export(plotTrajectoryFeatures)
@@ -368,6 +374,8 @@ export(setDefaultTrajectoryId)
 export(setDenoisedMatrix)
 export(setDirectoryInstructions)
 export(setFeatureDf)
+export(setImageAnnotation)
+export(setImageAnnotations)
 export(setImageDirHighres)
 export(setImageDirLowres)
 export(setPcaDf)
