--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,12 +16,14 @@ Imports:
     concaveman,
     colorspace,
     dplyr,
+    DT,
     ggalt,
     ggforce,
     ggplot2,
     ggridges,
     ggsci,
     glue,
+    keys,
     lubridate,
     magick,
     magrittr,
