--- a/NAMESPACE
+++ b/NAMESPACE
@@ -293,6 +293,7 @@ export(plotIasLineplot)
 export(plotImage)
 export(plotImageAnnotations)
 export(plotImageGgplot)
+export(plotOverview)
 export(plotPca)
 export(plotPcaVariation)
 export(plotRidgeplot)
@@ -301,7 +302,6 @@ export(plotScatterplot)
 export(plotSegmentation)
 export(plotSpatialTrajectories)
 export(plotStatisticsInteractive)
-export(plotSummary)
 export(plotSurface)
 export(plotSurface2)
 export(plotSurfaceAverage)
@@ -440,11 +440,10 @@ exportClasses(spatial_trajectory)
 exportMethods(asHistologyImage)
 exportMethods(asSpatialTrajectory)
 exportMethods(getImageAnnotationCenter)
-exportMethods(getSmrdResultsDf)
 exportMethods(getTrajectoryComment)
 exportMethods(getVarNames)
 exportMethods(plotClockplot)
-exportMethods(plotSummary)
+exportMethods(plotOverview)
 exportMethods(plotSurfaceIAS)
 exportMethods(plotVolcano)
 exportMethods(runGSEA)
