--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -74,11 +74,13 @@ Collate:
     'dev.R'
     'dimensional-reduction.R'
     'documentation-dummies.R'
+    'f.R'
     'find-cluster.R'
     'gene-expression-analysis.R'
     'gene-set-enrichment.R'
     'geom_point_fixed.R'
     'get-family.R'
+    'getA-Z.R'
     'ggplot2-layer.R'
     'hclust-implementation.R'
     'helper-functions.R'
@@ -104,6 +106,7 @@ Collate:
     'plot-family-statistics.R'
     'plot-family-summaries.R'
     'plot-family-surface.R'
+    'plotA-Z.R'
     'plotDeaVolcano.R'
     'plotIasHeatmap.R'
     'plotSurfaceBase.R'
