--- a/NAMESPACE
+++ b/NAMESPACE
@@ -155,8 +155,12 @@ export(getImageSectionsByBarcode)
 export(getInitiationInfo)
 export(getInitiationInput)
 export(getMatrix)
+export(getModelEvaluationDf)
 export(getPcaDf)
 export(getPcaMtr)
+export(getProjectionDf)
+export(getResultsDf)
+export(getResultsVec)
 export(getSampleNames)
 export(getSegmentDf)
 export(getSegmentNames)
@@ -182,7 +186,6 @@ export(getTrajectoryObject)
 export(getTrajectorySegmentDf)
 export(getTsneDf)
 export(getUmapDf)
-export(getVarNames)
 export(ggpInit)
 export(ggpLayerEncirclingGroups)
 export(ggpLayerEncirclingIAS)
@@ -440,8 +443,10 @@ exportClasses(spatial_trajectory)
 exportMethods(asHistologyImage)
 exportMethods(asSpatialTrajectory)
 exportMethods(getImageAnnotationCenter)
+exportMethods(getModelEvaluationDf)
+exportMethods(getResultsDf)
+exportMethods(getResultsVec)
 exportMethods(getTrajectoryComment)
-exportMethods(getVarNames)
 exportMethods(plotClockplot)
 exportMethods(plotOverview)
 exportMethods(plotSurfaceIAS)
