--- a/NAMESPACE
+++ b/NAMESPACE
@@ -268,6 +268,8 @@ export(plotAutoencoderAssessment)
 export(plotAutoencoderResults)
 export(plotBoxplot)
 export(plotClockplot)
+export(plotCnvHeatmap)
+export(plotCnvLineplot)
 export(plotCnvResults)
 export(plotCustomizedTrajectoryTrends)
 export(plotDeaDotPlot)
@@ -349,6 +351,7 @@ export(runAutoencoderAssessment)
 export(runAutoencoderDenoising)
 export(runBayesSpaceClustering)
 export(runCnvAnalysis)
+export(runDEA)
 export(runDeAnalysis)
 export(runGSEA)
 export(runHclust)
@@ -393,6 +396,7 @@ export(showColors)
 export(showModels)
 export(smoothSpatially)
 export(spatialTrajectoryScreening)
+export(subsetByBarcodes)
 export(subsetByBarcodes_CountMtr)
 export(subsetByBarcodes_ExprMtr)
 export(subsetBySegment_CountMtr)
