--- a/NAMESPACE
+++ b/NAMESPACE
@@ -53,9 +53,11 @@ export(check_trajectory_object)
 export(check_variables)
 export(close_area_df)
 export(clusterSpCorResults)
+export(computeCnvByChrArm)
 export(computeGeneMetaData)
 export(computeGeneMetaData2)
 export(compute_angle_between_two_points)
+export(containsCNV)
 export(containsHistologyImage)
 export(containsImage)
 export(containsImageObject)
@@ -97,7 +99,9 @@ export(getAutoencoderAssessment)
 export(getAutoencoderSetUp)
 export(getBarcodeSpotDistances)
 export(getBarcodes)
+export(getChrRegionsDf)
 export(getCnvFeatureNames)
+export(getCnvGenesDf)
 export(getCnvResults)
 export(getCoordsDf)
 export(getCoordsRange)
@@ -121,6 +125,7 @@ export(getGeneCounts)
 export(getGeneDistMtr)
 export(getGeneMetaData)
 export(getGeneMetaDf)
+export(getGenePosDf)
 export(getGeneSetDf)
 export(getGeneSetList)
 export(getGeneSetOverview)
