--- a/NAMESPACE
+++ b/NAMESPACE
@@ -337,6 +337,7 @@ export(plotTsne)
 export(plotTsneComparison)
 export(plotUmap)
 export(plotUmapComparison)
+export(plotVioBoxplot)
 export(plotViolinplot)
 export(plotVolcano)
 export(printAutoencoderSummary)
