--- a/NAMESPACE
+++ b/NAMESPACE
@@ -271,6 +271,7 @@ export(normalize_smrd_projection_df)
 export(peak_trends)
 export(plotAutoencoderAssessment)
 export(plotAutoencoderResults)
+export(plotBarchart)
 export(plotBoxplot)
 export(plotClockplot)
 export(plotCnvHeatmap)
