--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,7 +21,9 @@ export(allColorpalettes)
 export(allColorspectra)
 export(all_color_palettes)
 export(all_color_spectra)
+export(asGiotto)
 export(asHistologyImage)
+export(asSPATA2)
 export(asSpatialTrajectory)
 export(assessAutoencoderOptions)
 export(assessTrajectoryTrends)
@@ -31,6 +33,8 @@ export(assessTrajectoryTrendsCustomized2)
 export(bin_by_angle)
 export(bin_by_area)
 export(buffer_area)
+export(ccDist)
+export(check_ias_input)
 export(check_image_annotation_ids)
 export(check_image_annotation_tags)
 export(check_method)
@@ -63,6 +67,7 @@ export(containsImage)
 export(containsImageObject)
 export(countImageAnnotationTags)
 export(createImageAnnotations)
+export(createImageObject)
 export(createSegmentation)
 export(createSegmentation2)
 export(createSpatialSegmentation)
@@ -97,6 +102,7 @@ export(geom_point_fixed)
 export(getActiveMatrixName)
 export(getAutoencoderAssessment)
 export(getAutoencoderSetUp)
+export(getBarcodeSpotDistance)
 export(getBarcodeSpotDistances)
 export(getBarcodes)
 export(getChrRegionsDf)
@@ -166,6 +172,7 @@ export(getPcaMtr)
 export(getProjectionDf)
 export(getResultsDf)
 export(getResultsVec)
+export(getSampleName)
 export(getSampleNames)
 export(getSegmentDf)
 export(getSegmentNames)
@@ -188,14 +195,17 @@ export(getTrajectoryIds)
 export(getTrajectoryLength)
 export(getTrajectoryNames)
 export(getTrajectoryObject)
+export(getTrajectoryScreeningDf)
 export(getTrajectorySegmentDf)
 export(getTsneDf)
 export(getUmapDf)
 export(ggpInit)
 export(ggpLayerEncirclingGroups)
 export(ggpLayerEncirclingIAS)
+export(ggpLayerFixFrame)
 export(ggpLayerFrameByCoords)
 export(ggpLayerFrameByImage)
+export(ggpLayerHorizonIAS)
 export(ggpLayerImage)
 export(ggpLayerImageAnnotation)
 export(ggpLayerRect)
@@ -299,6 +309,7 @@ export(plotGeneDendrogram)
 export(plotGeneMetaData)
 export(plotGseaDotPlot)
 export(plotHistogram)
+export(plotIasEvaluation)
 export(plotIasHeatmap)
 export(plotIasLineplot)
 export(plotImage)
@@ -325,6 +336,7 @@ export(plotSurfaceQuantiles)
 export(plotSurfaceTrajectoryBins)
 export(plotTrajectory)
 export(plotTrajectoryBarplot)
+export(plotTrajectoryEvaluation)
 export(plotTrajectoryFeatures)
 export(plotTrajectoryFeaturesDiscrete)
 export(plotTrajectoryFit)
@@ -452,6 +464,7 @@ exportClasses(dim_red)
 exportClasses(spata2)
 exportClasses(spatial_trajectory)
 exportMethods(asHistologyImage)
+exportMethods(asSPATA2)
 exportMethods(asSpatialTrajectory)
 exportMethods(getImageAnnotationCenter)
 exportMethods(getModelEvaluationDf)
