--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -74,9 +74,10 @@ Collate:
     'create_family.R'
     'data.R'
     'deprecated.R'
-    'dev.R'
     'dimensional-reduction.R'
     'documentation-dummies.R'
+    'e.R'
+    'european_unit_of_length.R'
     'f.R'
     'find-cluster.R'
     'gene-expression-analysis.R'
@@ -87,6 +88,7 @@ Collate:
     'ggplot2-layer.R'
     'hclust-implementation.R'
     'helper-functions.R'
+    'i.R'
     'image-annotation-screening.R'
     'image-handling.R'
     'imported-functions.R'
@@ -130,6 +132,7 @@ Collate:
     'spata-object-manipulation.R'
     'spatial-correlation.R'
     'spatially-variable-genes-wrapper.R'
+    't.R'
     'trajectory-plots-new.R'
     'trajectory-screening.R'
     'transform-family.R'
