--- a/NAMESPACE
+++ b/NAMESPACE
@@ -215,6 +215,7 @@ export(getTrajectorySegmentDf)
 export(getTsneDf)
 export(getUmapDf)
 export(ggpInit)
+export(ggpLayerAxesEUOL)
 export(ggpLayerEncirclingGroups)
 export(ggpLayerEncirclingIAS)
 export(ggpLayerFixFrame)
