--- a/NAMESPACE
+++ b/NAMESPACE
@@ -334,6 +334,7 @@ export(plotIasLineplot)
 export(plotImage)
 export(plotImageAnnotations)
 export(plotImageGgplot)
+export(plotMosaicplot)
 export(plotOverview)
 export(plotPca)
 export(plotPcaVariation)
