--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -76,12 +76,8 @@ Collate:
     'imported-functions.R'
     'initiateSpataObject.R'
     'j.R'
-    'loading-and-saving.R'
-    'logical-tests.R'
-    'lump-groups.R'
+    'l.R'
     'm.R'
-    'merge-spata-objects.R'
-    'miscellaneous-data-frame-functions.R'
     'miscellaneous.R'
     'modeling.R'
     'module-add-gene-sets.R'
@@ -89,15 +85,18 @@ Collate:
     'n-functions.R'
     'p.R'
     'package-dependencies.R'
-    'plot-family-miscellaneous.R'
     'plot-family-statistics.R'
     'plot-family-summaries.R'
     'plot-family-surface.R'
-    'plotA-Z.R'
-    'plotDeaVolcano.R'
+    'plotA-D.R'
+    'plotA-G.R'
+    'plotF-G.R'
+    'plotH-M.R'
+    'plotN-Z.R'
     'plotSurfaceBase.R'
     'plotSurfaceInteractivelyDiet.R'
     'plotTrajectoryLineplotFitted.R'
+    'plot_.R'
     'plotting-add-ons.R'
     'printA-Z.R'
     'process-seurat-object.R'
