--- a/NAMESPACE
+++ b/NAMESPACE
@@ -284,6 +284,7 @@ export(loadImageLowres)
 export(loadSpataObject)
 export(logarithmic_trends)
 export(make_pretty_model_names)
+export(make_scattermore_add_on)
 export(mapImageAnnotationTags)
 export(mergeGroups)
 export(mergeSpataObjects)
@@ -379,6 +380,7 @@ export(renameFeatures)
 export(renameGroups)
 export(renameImageAnnotationId)
 export(renameSegments)
+export(rotateCoords)
 export(rotateImage)
 export(runAutoencoderAssessment)
 export(runAutoencoderDenoising)
