--- a/NAMESPACE
+++ b/NAMESPACE
@@ -39,6 +39,7 @@ export(assessTrajectoryTrends)
 export(assessTrajectoryTrends2)
 export(assessTrajectoryTrendsCustomized)
 export(assessTrajectoryTrendsCustomized2)
+export(attachUnit)
 export(bin_by_angle)
 export(bin_by_area)
 export(bin_by_expansion)
