scattermore option improved

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -296,6 +296,7 @@ export(nGenes)
 export(nImageAnnotations)
 export(nest_shifted_projection_df)
 export(normalize_smrd_projection_df)
+export(order_df)
 export(peak_trends)
 export(plotAutoencoderAssessment)
 export(plotAutoencoderResults)
