--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,17 +22,25 @@ export(allColorpalettes)
 export(allColorspectra)
 export(all_color_palettes)
 export(all_color_spectra)
-export(asCentimeter)
-export(asDecimeter)
+export(are_all_area_or_dist)
 export(asGiotto)
 export(asHistologyImage)
-export(asMeter)
-export(asMicrometer)
-export(asMillimeter)
-export(asNanometer)
-export(asPixel)
 export(asSPATA2)
 export(asSpatialTrajectory)
+export(as_SPATA2_dist)
+export(as_centimeter)
+export(as_centimeter2)
+export(as_decimeter)
+export(as_decimeter2)
+export(as_meter)
+export(as_meter2)
+export(as_micrometer)
+export(as_micrometer2)
+export(as_millimeter)
+export(as_millimeter2)
+export(as_nanometer)
+export(as_nanometer2)
+export(as_pixel)
 export(as_unit)
 export(assessAutoencoderOptions)
 export(assessTrajectoryTrends)
@@ -40,6 +48,7 @@ export(assessTrajectoryTrends2)
 export(assessTrajectoryTrendsCustomized)
 export(assessTrajectoryTrendsCustomized2)
 export(attachUnit)
+export(attach_uni)
 export(bin_by_angle)
 export(bin_by_area)
 export(bin_by_expansion)
@@ -164,6 +173,7 @@ export(getImageAnnotationCenter)
 export(getImageAnnotationCenterBcsp)
 export(getImageAnnotationIds)
 export(getImageAnnotationScreeningDf)
+export(getImageAnnotationSize)
 export(getImageAnnotationTags)
 export(getImageAnnotations)
 export(getImageDims)
@@ -183,6 +193,7 @@ export(getMethodUnit)
 export(getModelEvaluationDf)
 export(getPcaDf)
 export(getPcaMtr)
+export(getPixelScaleFactor)
 export(getProjectionDf)
 export(getResultsDf)
 export(getResultsVec)
@@ -258,9 +269,12 @@ export(isFlipped)
 export(isGene)
 export(isGeneSet)
 export(isNumericVariable)
+export(is_area)
 export(is_dist)
-export(is_eUOL_dist)
-export(is_pixel_dist)
+export(is_dist_euol)
+export(is_dist_pixel)
+export(is_unit_area)
+export(is_unit_dist)
 export(joinWith)
 export(joinWithFeatures)
 export(joinWithGeneSets)
@@ -420,6 +434,7 @@ export(setImageAnnotations)
 export(setImageDirHighres)
 export(setImageDirLowres)
 export(setPcaDf)
+export(setPixelScaleFactor)
 export(setScaledMatrix)
 export(setSpataDir)
 export(setTsneDf)
@@ -448,10 +463,10 @@ export(trajectory_patterns)
 export(transformSeuratToSpata)
 export(transformSpataToCDS)
 export(transformSpataToSeurat)
-export(transform_eUOL_to_pixel)
-export(transform_eUOL_to_pixels)
-export(transform_pixel_to_eUOL)
-export(transform_pixels_to_eUOL)
+export(transform_euol_to_pixel)
+export(transform_euol_to_pixels)
+export(transform_pixel_to_euol)
+export(transform_pixels_to_euol)
 export(updateSpataObject)
 export(validActivationFunctions)
 export(validAgglomerationMethods)
@@ -472,6 +487,7 @@ export(validPatternRecognitionMethods)
 export(validPlotTypes)
 export(validSpatialMethods)
 export(validUnits)
+export(validUnitsOfArea)
 export(validUnitsOfLength)
 export(validateSpataObject)
 export(vselect)
