misc image handling

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -115,9 +115,13 @@ export(filterTrends)
 export(findMonocleClusters)
 export(findNearestNeighbourClusters)
 export(findSeuratClusters)
+export(flipCoordinates)
 export(flipCoords)
+export(flipCoordsDf)
 export(flipImage)
 export(flipImageAndCoords)
+export(flipImageAnnotations)
+export(flipSpatialTrajectories)
 export(geom_point_fixed)
 export(getActiveExpressionMatrixName)
 export(getActiveMatrixName)
@@ -168,12 +172,12 @@ export(getGseaResults)
 export(getImage)
 export(getImageAnnotation)
 export(getImageAnnotationAreaDf)
+export(getImageAnnotationAreaSize)
 export(getImageAnnotationBarcodes)
 export(getImageAnnotationCenter)
 export(getImageAnnotationCenterBcsp)
 export(getImageAnnotationIds)
 export(getImageAnnotationScreeningDf)
-export(getImageAnnotationSize)
 export(getImageAnnotationTags)
 export(getImageAnnotations)
 export(getImageDims)
@@ -193,10 +197,12 @@ export(getMethodUnit)
 export(getModelEvaluationDf)
 export(getPcaDf)
 export(getPcaMtr)
+export(getPixelDf)
 export(getPixelScaleFactor)
 export(getProjectionDf)
 export(getResultsDf)
 export(getResultsVec)
+export(getSampleAreaSize)
 export(getSampleName)
 export(getSampleNames)
 export(getSegmentDf)
@@ -234,6 +240,7 @@ export(ggpLayerHorizonIAS)
 export(ggpLayerImage)
 export(ggpLayerImageAnnotation)
 export(ggpLayerRect)
+export(ggpLayerScaleBarEUOL)
 export(ggpLayerThemeCoords)
 export(ggpLayerTrajectories)
 export(ggpLayerZoom)
@@ -270,6 +277,8 @@ export(isGene)
 export(isGeneSet)
 export(isNumericVariable)
 export(is_area)
+export(is_area_pixel)
+export(is_area_si)
 export(is_dist)
 export(is_dist_euol)
 export(is_dist_pixel)
@@ -308,6 +317,7 @@ export(nBarcodes)
 export(nCounts)
 export(nGenes)
 export(nImageAnnotations)
+export(nSpatialTrajectories)
 export(nest_shifted_projection_df)
 export(normalize_smrd_projection_df)
 export(order_df)
@@ -417,6 +427,10 @@ export(saveCorrespondingCDS)
 export(saveCorrespondingSeuratObject)
 export(saveGeneSetDf)
 export(saveSpataObject)
+export(scaleCoordinates)
+export(scaleCoordsDf)
+export(scaleImageAnnotations)
+export(scaleSpatialTrajectories)
 export(scale_color_add_on)
 export(setActiveExpressionMatrix)
 export(setCnvResults)
@@ -466,7 +480,11 @@ export(transformSpataToSeurat)
 export(transform_euol_to_pixel)
 export(transform_euol_to_pixels)
 export(transform_pixel_to_euol)
+export(transform_pixel_to_si)
 export(transform_pixels_to_euol)
+export(transform_pixels_to_si)
+export(transform_si_to_pixel)
+export(transform_si_to_pixels)
 export(updateSpataObject)
 export(validActivationFunctions)
 export(validAgglomerationMethods)
@@ -488,6 +506,7 @@ export(validPlotTypes)
 export(validSpatialMethods)
 export(validUnits)
 export(validUnitsOfArea)
+export(validUnitsOfAreaSI)
 export(validUnitsOfLength)
 export(validateSpataObject)
 export(vselect)
