misc distance and area handling

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -177,6 +177,7 @@ export(getImageAnnotationBarcodes)
 export(getImageAnnotationCenter)
 export(getImageAnnotationCenterBcsp)
 export(getImageAnnotationIds)
+export(getImageAnnotationRange)
 export(getImageAnnotationScreeningDf)
 export(getImageAnnotationTags)
 export(getImageAnnotations)
@@ -230,6 +231,7 @@ export(getTrajectorySegmentDf)
 export(getTsneDf)
 export(getUmapDf)
 export(ggpInit)
+export(ggpLayerAxesClean)
 export(ggpLayerAxesEUOL)
 export(ggpLayerEncirclingGroups)
 export(ggpLayerEncirclingIAS)
@@ -398,6 +400,8 @@ export(printAutoencoderSummary)
 export(printDeaOverview)
 export(printDefaultInstructions)
 export(printGeneSetOverview)
+export(process_expand_input)
+export(process_ranges)
 export(project_on_trajectory)
 export(project_on_vector)
 export(relevelGroups)
