initiate object fix

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -242,6 +242,7 @@ export(ggpLayerHorizonIAS)
 export(ggpLayerImage)
 export(ggpLayerImageAnnotation)
 export(ggpLayerRect)
+export(ggpLayerSampleMask)
 export(ggpLayerScaleBarEUOL)
 export(ggpLayerThemeCoords)
 export(ggpLayerTrajectories)
