--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,7 +26,9 @@ export(are_all_area_or_dist)
 export(asGiotto)
 export(asHistologyImage)
 export(asSPATA2)
+export(asSingleCellExperiment)
 export(asSpatialTrajectory)
+export(asSummarizedExperiment)
 export(as_SPATA2_dist)
 export(as_centimeter)
 export(as_centimeter2)
