--- a/NAMESPACE
+++ b/NAMESPACE
@@ -440,6 +440,7 @@ export(scaleImageAnnotations)
 export(scaleSpatialTrajectories)
 export(scale_color_add_on)
 export(setActiveExpressionMatrix)
+export(setBarcodes)
 export(setCnvResults)
 export(setCoordsDf)
 export(setCountMatrix)
