--- a/NAMESPACE
+++ b/NAMESPACE
@@ -131,6 +131,7 @@ export(flipImageAndCoords)
 export(flipImageAnnotations)
 export(flipSpatialTrajectories)
 export(geom_point_fixed)
+export(geom_segment_fixed)
 export(geom_text_fixed)
 export(getActiveExpressionMatrixName)
 export(getActiveMatrixName)
