--- a/NAMESPACE
+++ b/NAMESPACE
@@ -140,6 +140,7 @@ export(getAutoencoderSetUp)
 export(getBarcodeSpotDistance)
 export(getBarcodeSpotDistances)
 export(getBarcodes)
+export(getBarcodesInPolygon)
 export(getCCD)
 export(getChrRegionsDf)
 export(getCnvFeatureNames)
